Fix reference to sampler-controller.js

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         document.getElementById('not_supported').hidden = false
       }
 
-      import SamplerController from '/sampler-controller.js'
+      import SamplerController from './sampler-controller.js'
       new SamplerController()
     </script>
   </head>
