--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="autosampler" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://taperinstruments.github.io/autosampler/" />
     <meta property="og:description" content="A port of Yann Seznec's auto_sampler for the Web" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="https://taperinstruments.github.io/autosampler/screenshot.png" />
     <meta name="twitter:card" content="summary" />
 
     <link href="https://api.fontshare.com/css?f[]=clash-grotesk@1&display=swap" rel="stylesheet">
