--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </svg>
       <p>Sorry, your browser does not support the required MediaRecorder feature.</p>
       <p>Some Safari versions have experimental support.<br>To enable on macOS: in Preferences - Advanced - check Show Develop Menu. Then from the Develop menu choose: Experimental Features - MediaRecorder</p>
-      <p>On iOS enable MediaRecorder: in Settings - Safari - Advanced - Experimental Features - MediaRecorder</p>
+      <p>On iOS, enable MediaRecorder: in Settings - Safari - Advanced - Experimental Features - MediaRecorder</p>
     </div>
     <div id="controls" class="controls" style="display: none">
       <label for="sampling">
